<resources>
    <string name="app_name">Playlist maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings_name">Настройки</string>
    <string name="theme_switcher">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="link_to_yp_android_developer">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="letter_theme_to_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="letter_text_to_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="yp_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="checking_text">Any TEXT</string>
    <string name="nothing_not_found">Ничего не нашлось</string>
    <string name="not_connection">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="your_recent_search">Вы искали</string>
    <string name="country_track">Страна</string>
    <string name="genre_track">Жанр</string>
    <string name="year_track">Год</string>
    <string name="album_track">Альбом</string>
    <string name="time_track">Длительность</string>


</resources>