<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_menu_space_56dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_button"
            style="@style/ButtonsInSettingsActivityStyle"
            android:layout_height="@dimen/top_menu_space_56dp"
            android:layout_marginHorizontal="4dp"
            android:src="@drawable/vector"
            app:tint="?attr/colorOnSecondary" />


        <TextView
            android:id="@+id/title_settings"
            style="@style/TextMainTitleScreenStyle"
            android:layout_width="0dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/search" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/container"
        style="@style/ContainerBySearch"
        android:layout_marginVertical="8dp"
        android:layout_marginBottom="@dimen/sight_padding_16dp">


        <EditText
            android:id="@+id/inputEditText"
            style="@style/InputEditTextBySearch"
            android:drawableStart="@drawable/vector_mini"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/ClearIconBySearch"
            android:layout_marginEnd="16dp"
            android:src="@drawable/clear_button" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTracks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:id="@+id/llNotFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/track_not_found" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/sight_margin_24dp"
            android:layout_marginTop="@dimen/sight_padding_16dp"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/nothing_not_found"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_in_menu_19sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNotConnection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/connection_not_found"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/sight_margin_24dp"
            android:layout_marginTop="@dimen/sight_padding_16dp"
            android:layout_marginBottom="@dimen/sight_margin_24dp"
            android:layout_gravity="center_horizontal|top"
            android:text="@string/not_connection"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_in_menu_19sp"/>
        <Button
            android:id="@+id/bRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="@dimen/sight_padding_14dp"
            android:paddingVertical="@dimen/sight_padding_8dp"
            app:cornerRadius="50dp"
            android:textAllCaps="false"
            android:text="@string/refresh"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_in_menu_14sp"
            android:textColor="?attr/colorPrimary"
            android:backgroundTint="?attr/colorOnSecondary"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRecentSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sight_margin_24dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/tvYourRecentSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/sight_padding_16dp"
            android:text="@string/your_recent_search"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="@dimen/text_in_menu_19sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecentSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/sight_padding_8dp" />

        <Button
            android:id="@+id/bClearHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sight_margin_24dp"
            android:layout_marginBottom="@dimen/sight_padding_16dp"
            android:paddingHorizontal="@dimen/sight_padding_14dp"
            android:paddingVertical="@dimen/sight_padding_8dp"
            android:text="@string/clear_history"
            android:textSize="@dimen/text_in_menu_14sp"
            android:textColor="?attr/colorPrimary"
            android:backgroundTint="?attr/colorOnSecondary"
            android:textAlignment="center"
            app:cornerRadius="50dp"
            android:textAllCaps="false" />

    </LinearLayout>


</LinearLayout>
