<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_background"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/sight_padding"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="@dimen/primary_text_size" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/find_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/sight_padding"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/sight_padding"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_display_medium"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/find"
            android:textAllCaps="false"
            android:textColor="@color/black_text"
            android:textSize="@dimen/primary_text_size"
            app:icon="@drawable/find_vector"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"/>

        <Button
            android:id="@+id/media_library_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/sight_padding"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/sight_padding"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_display_medium"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/media_library"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black_text"
            android:textSize="22sp"
            app:icon="@drawable/media_vector"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"/>

        <Button
            android:id="@+id/setting_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/sight_padding"
            android:layout_marginTop="8dp"
            android:layout_marginRight="@dimen/sight_padding"
            android:layout_marginBottom="28dp"
            android:layout_weight="1"

            android:backgroundTint="@color/white"
            android:fontFamily="@font/ys_display_medium"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/settings_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black_text"
            android:textSize="@dimen/primary_text_size"
            app:icon="@drawable/setting_vector"
            app:iconGravity="textStart"
            app:iconPadding="10dp"
            app:iconTint="@color/black"
            app:cornerRadius="16dp"/>
    </LinearLayout>


</LinearLayout>

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginHorizontal="63dp"-->
    <!--android:layout_marginTop="33dp"-->
    <!--android:gravity="center"-->
    <!--android:text="Рейтинг этого фильма больше, чем 9?:"-->
    <!--android:textColor="#ffffff"-->
    <!--android:textSize="23sp"-->
    <!--android:textStyle="bold" />-->

    <!--<ImageView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0dp"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:layout_weight="1"-->
    <!--android:scaleType="centerCrop"-->
    <!--android:src="@drawable/poster" />-->